--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,12 @@
   "builds": [
     { "src": "api/index.py", "use": "@vercel/python" }
   ],
+  "functions": {
+    "api/index.py": {
+      "runtime": "python3.12"
+    }
+  },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/index.py" }
   ]
 }
-
