--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.py": {
-      "runtime": "python3.12"
-    }
-  },
+  "functions": {},
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/index.py" }
   ]
