--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ dependencies = [
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "alembic (>=1.16.5,<2.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "aiofiles (>=23.0.0,<24.0.0)"
+    "aiofiles (>=23.0.0,<24.0.0)",
+    "python-frontmatter",
+    "PyYAML",
+    "fastapi-cache2"
 ]
 
 
