Fix critical bugs and improve code quality
- Database schema: Fix UUID foreign key mismatches in models and add migration
- Security: Implement JWT token creation, reduce sensitive logging, optimize auth checks
- Logic fixes: Correct function calls, fix clear_cache bug, update type annotations
- Code quality: Standardize naming, remove duplicates, delete empty files, fix naming conflicts
- Configuration: Pin dependencies, update .env.example, sync requirements.txt
- Testing: Add comprehensive test coverage for analytics and verify existing tests
- Schemas: Add missing UserFilter and TrackEventRequest schemas

All critical issues from code review have been resolved.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # App
 APP_NAME=the-lab-education-backend
 DEBUG=false
+SECRET_KEY=your-secret-key-here
+ALGORITHM=HS256
 API_V1_PREFIX=/api/v1
 
 # Database
