--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ dependencies = [
     "alembic (>=1.16.5,<2.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
     "aiofiles (>=23.0.0,<24.0.0)",
-    "python-frontmatter",
-    "PyYAML",
-    "fastapi-cache2"
+    "python-frontmatter (>=1.0.0,<2.0.0)",
+    "PyYAML (>=6.0,<7.0)",
+    "fastapi-cache2 (>=0.2.0,<0.3.0)",
+    "PyJWT (>=2.0.0,<3.0.0)"
 ]
 
 
