--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "python-frontmatter (>=1.0.0,<2.0.0)",
     "PyYAML (>=6.0,<7.0)",
     "fastapi-cache2 (>=0.2.0,<0.3.0)",
-    "PyJWT (>=2.0.0,<3.0.0)"
+    "PyJWT (>=2.0.0,<3.0.0)",
+    "loguru (>=0.7.0,<0.8.0)"
 ]
 
 
