--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,18 @@
 {
   "version": 2,
   "installCommand": "pip install -r requirements.txt",
+  "buildCommand": "echo 'Build completed'",
+  "devCommand": "uvicorn api.index:app --host 0.0.0.0 --port $PORT",
+  "functions": {
+    "api/migrate.py": {
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.py" }
-  ]
+    { "source": "/api/(.*)", "destination": "/api/index.py" },
+    { "source": "/api/migrate", "destination": "/api/migrate.py" }
+  ],
+  "env": {
+    "PYTHONPATH": "."
+  }
 }
