--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
     "supabase (>=2.21.1,<3.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "alembic (>=1.16.5,<2.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
