--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pydantic-settings==2.11.0
 python-dotenv==1.1.1
 passlib[bcrypt]==1.7.4
 supabase==2.21.1
+asyncpg==0.30.0
 psycopg2-binary==2.9.10
 sqlalchemy==2.0.43
 alembic==1.16.5
