--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "PyYAML (>=6.0,<7.0)",
     "fastapi-cache2 (>=0.2.0,<0.3.0)",
     "PyJWT (>=2.0.0,<3.0.0)",
-    "loguru (>=0.7.0,<0.8.0)"
+    "loguru (>=0.7.0,<0.8.0)",
+    "cachetools (>=5.0.0,<6.0.0)"
 ]
 
 
