--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,12 @@ dependencies = [
     "fastapi-cache2 (>=0.2.0,<0.3.0)",
     "PyJWT (>=2.0.0,<3.0.0)",
     "loguru (>=0.7.0,<0.8.0)",
-    "cachetools (>=5.0.0,<6.0.0)"
+    "cachetools (>=5.0.0,<6.0.0)",
+    "tenacity (>=8.0.0,<9.0.0)",
+    "pybreaker (>=1.2.0,<2.0.0)",
+    "slowapi (>=0.1.9,<0.2.0)",
+    "email-validator (>=2.0.0,<3.0.0)",
+    "cryptography (>=42.0.0,<43.0.0)"
 ]
 
 
