--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 API_V1_PREFIX=/api/v1
 
-# Database
+# Database.    
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/postgres
 
 # Supabase
