--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,5 +44,6 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "pytest (>=8.4.2,<9.0.0)",
-    "pytest-asyncio (>=1.2.0,<2.0.0)"
+    "pytest-asyncio (>=1.2.0,<2.0.0)",
+    "pytest-cov (>=4.0.0,<5.0.0)"
 ]
