--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,6 +13,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      PYTHONPATH: src
+
     services:
       postgres:
         image: postgres:15
@@ -46,7 +49,7 @@ jobs:
 
     - name: Run tests
       run: |
-        PYTHONPATH=src poetry run pytest --cov=src --cov-report=xml
+        poetry run pytest --cov=src --cov-report=xml
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
 
