--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,6 @@ dev = [
     "pytest-asyncio (>=1.2.0,<2.0.0)",
     "pytest-cov (>=4.0.0,<5.0.0)"
 ]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
