Fix email validation and async service tests

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DEBUG=false
 SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 API_V1_PREFIX=/api/v1
+EMAIL_CHECK_DELIVERABILITY=true
 
 # Database
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/postgres
