--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,8 @@ build-backend = "poetry.core.masonry.api"
 dev = [
     "pytest (>=8.4.2,<9.0.0)",
     "pytest-asyncio (>=1.2.0,<2.0.0)",
-    "pytest-cov (>=4.0.0,<5.0.0)"
+    "pytest-cov (>=4.0.0,<5.0.0)",
+    "pytest-mock (>=3.14.0,<4.0.0)"
 ]
 
 [tool.pytest.ini_options]
