--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "asyncpg (>=0.30.0,<0.31.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "alembic (>=1.16.5,<2.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
     "aiofiles (>=23.0.0,<24.0.0)",
     "python-frontmatter (>=1.0.0,<2.0.0)",
