--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,6 +46,12 @@ jobs:
       run: |
         poetry install --with dev
 
+    - name: Prepare database roles
+      run: |
+        psql -h localhost -U postgres -c "DO $$ BEGIN IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname = 'root') THEN CREATE ROLE root WITH LOGIN PASSWORD 'root'; END IF; END $$;"
+      env:
+        PGPASSWORD: postgres
+
     - name: Run tests
       run: |
         poetry run pytest --cov=src --cov-report=xml
@@ -92,6 +98,18 @@ jobs:
     - name: Install dependencies
       run: |
         poetry install
+
+    - name: Prepare database roles
+      run: |
+        psql -h localhost -U postgres -c "DO $$ BEGIN IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname = 'root') THEN CREATE ROLE root WITH LOGIN PASSWORD 'root'; END IF; END $$;"
+      env:
+        PGPASSWORD: postgres
+
+    - name: Apply migrations
+      run: |
+        poetry run alembic upgrade head
+      env:
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/migration_db
 
     - name: Check migration status
       run: |
