--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Prepare database roles
       run: |
-        psql -h localhost -U postgres -c "DO $$ BEGIN IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname = 'root') THEN CREATE ROLE root WITH LOGIN PASSWORD 'root'; END IF; END $$;"
+        psql -h localhost -U postgres -tc "SELECT 1 FROM pg_roles WHERE rolname='root'" | grep -q 1 || psql -h localhost -U postgres -c "CREATE ROLE root WITH LOGIN PASSWORD 'root';"
       env:
         PGPASSWORD: postgres
 
@@ -101,7 +101,7 @@ jobs:
 
     - name: Prepare database roles
       run: |
-        psql -h localhost -U postgres -c "DO $$ BEGIN IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname = 'root') THEN CREATE ROLE root WITH LOGIN PASSWORD 'root'; END IF; END $$;"
+        psql -h localhost -U postgres -tc "SELECT 1 FROM pg_roles WHERE rolname='root'" | grep -q 1 || psql -h localhost -U postgres -c "CREATE ROLE root WITH LOGIN PASSWORD 'root';"
       env:
         PGPASSWORD: postgres
 
