--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -130,7 +130,12 @@ jobs:
   deploy-staging:
     runs-on: ubuntu-latest
     needs: [test, migration-check]
-    if: github.ref == 'refs/heads/bug_fix' && github.event_name == 'push'
+    if: >
+      github.ref == 'refs/heads/bug_fix' &&
+      github.event_name == 'push' &&
+      secrets.VERCEL_TOKEN != '' &&
+      secrets.VERCEL_ORG_ID != '' &&
+      secrets.VERCEL_PROJECT_ID != ''
 
     steps:
     - uses: actions/checkout@v4
@@ -146,7 +151,12 @@ jobs:
   deploy-production:
     runs-on: ubuntu-latest
     needs: [test, migration-check]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: >
+      github.ref == 'refs/heads/main' &&
+      github.event_name == 'push' &&
+      secrets.VERCEL_TOKEN != '' &&
+      secrets.VERCEL_ORG_ID != '' &&
+      secrets.VERCEL_PROJECT_ID != ''
     environment: production
 
     steps:
