--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,10 @@ PyJWT==2.10.1
 loguru==0.7.0
 cachetools==5.5.0
 slowapi==0.1.9
+tenacity==8.5.0
+pybreaker==1.2.4
+email-validator==2.1.0.post1
+cryptography==42.0.8
 pytest==8.4.2
 pytest-asyncio==1.2.0
 pytest-cov==4.1.0
