--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -130,15 +130,24 @@ jobs:
   deploy-staging:
     runs-on: ubuntu-latest
     needs: [test, migration-check]
-    if: >
-      github.ref == 'refs/heads/bug_fix' &&
-      github.event_name == 'push' &&
-      secrets.VERCEL_TOKEN != '' &&
-      secrets.VERCEL_ORG_ID != '' &&
-      secrets.VERCEL_PROJECT_ID != ''
+    if: github.ref == 'refs/heads/bug_fix' && github.event_name == 'push'
+    env:
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Determine Vercel eligibility
+      id: staging_vercel_check
+      run: |
+        if [ -z "${VERCEL_TOKEN}" ] || [ -z "${VERCEL_ORG_ID}" ] || [ -z "${VERCEL_PROJECT_ID}" ]; then
+          echo "Vercel secrets missing; skipping staging deploy."
+          echo "should_deploy=false" >> "$GITHUB_OUTPUT"
+        else
+          echo "should_deploy=true" >> "$GITHUB_OUTPUT"
+        fi
 
     - name: Deploy to Vercel (Staging)
       uses: amondnet/vercel-action@v25
@@ -147,20 +156,30 @@ jobs:
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
         vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
         vercel-args: '--prod=false'
+      if: steps.staging_vercel_check.outputs.should_deploy == 'true'
 
   deploy-production:
     runs-on: ubuntu-latest
     needs: [test, migration-check]
-    if: >
-      github.ref == 'refs/heads/main' &&
-      github.event_name == 'push' &&
-      secrets.VERCEL_TOKEN != '' &&
-      secrets.VERCEL_ORG_ID != '' &&
-      secrets.VERCEL_PROJECT_ID != ''
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment: production
+    env:
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Determine Vercel eligibility
+      id: production_vercel_check
+      run: |
+        if [ -z "${VERCEL_TOKEN}" ] || [ -z "${VERCEL_ORG_ID}" ] || [ -z "${VERCEL_PROJECT_ID}" ]; then
+          echo "Vercel secrets missing; skipping production deploy."
+          echo "should_deploy=false" >> "$GITHUB_OUTPUT"
+        else
+          echo "should_deploy=true" >> "$GITHUB_OUTPUT"
+        fi
 
     - name: Deploy to Vercel (Production)
       uses: amondnet/vercel-action@v25
@@ -169,6 +188,7 @@ jobs:
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
         vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
         vercel-args: '--prod=true'
+      if: steps.production_vercel_check.outputs.should_deploy == 'true'
 
   migrate-production:
     runs-on: ubuntu-latest
